--- a/package.json
+++ b/package.json
@@ -9,17 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.18",
-    "@supabase/ssr": "^0.1.0",
+    "@chakra-ui/next-js": "^2.2.0",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@headlessui/react": "^2.1.2",
+    "@hookform/resolvers": "^3.9.0",
     "@supabase/supabase-js": "^2.39.8",
-    "next": "14.1.0",
+    "cryptr": "^6.3.0",
+    "framer-motion": "^11.2.13",
+    "next": "^14.2.4",
+    "next-qrcode": "^2.5.1",
+    "openai": "^4.53.0",
     "react": "^18",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
-    "resend": "^3.2.0"
+    "react-hook-form": "^7.52.1",
+    "react-icons": "^5.2.1",
+    "react-to-print": "^2.15.1",
+    "resend": "^3.2.0",
+    "sharp": "^0.33.4",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
